@@ -1,5 +1,8 @@
 2008-09-11  Marc Singer  <elf@zealous.synapse.com>
 
+	* src/apex/cmd-copy.c (cmd_copy): Fixed the return value so copy
+	doesn't stop startup.
+
 	* src/apex/cmd-image.c (handle_load_apex_image): Cleaned up the
 	output and make the check and load functions look similar in
 	output.
